# django-profiles-api

./: .gitignore  .pre-commit-config.yaml  isort.cfg  manage.py  pyproject.toml
ProfileProject/: asgi.py  settings.py  urls.py  wsgi.py
profiles_api/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
profiles_api/migrations/: 0001_initial.py  0002_profilefeeditem.py
