[tool.poetry]
name = "profileproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.flake8]
max-line-length = 120
exclude = [".git,__pycache__,venv,.venv,.mypy_cache,.pytest_cache,.tox"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
isort = "^5.13.2"
pre-commit = "^3.8.0"
flake8 = "^7.1.1"


[tool.isort]

# Global
multi_line_output = 3
include_trailing_comma = true
line_length = 120
lines_after_imports = 2
lines_between_sections = 1
lines_between_types = 0
force_alphabetical_sort_within_sections = true
ensure_newline_before_comments = true
combine_as_imports = true
combine_star = true
skip_gitignore = true
balanced_wrapping = true
force_grid_wrap = 2

# Local
src_paths = ["profiles_api"]

skip_glob = [".git", ".idea", ".pycharm", "venv", ".venv"]

# Known
known_django = ["django", "rest_framework"]
known_first_party = ["profiles_api"]

# Sections
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
